# project1_Filippovich_Vladislav_M255-55

./: .gitignore  README.md  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
